appId: host.exp.Exponent
---
- launchApp
- tapOn: 'Personal Expense Tracker'
- extendedWaitUntil:
    visible:
      text: 'Welcome back,'
    timeout: 30000
- assertVisible:
    text: 'My Wallet'
- assertVisible:
    text: 'Recent Activity'
